bin_PROGRAMS = TaskProcessor
INCLUDES = -I$(top_srcdir)/Common
bindir = $(prefix)
TaskProcessor_LDADD = $(top_srcdir)/Common/libCommon.la
TaskProcessor_SOURCES = TaskProcessorConfig.h TaskProcessorConfig.cpp ITaskProcess.h TaskPorcess.h TaskProcess.cpp TaskProcessor.h TaskProcessor.cpp TaskProcessorMain.cpp
