libCommon_la_SOURCES = Common.cpp \
LMEnDecrypt.cpp \
TimeStamp.cpp \
ThreadGroup.cpp \
CriticalSection.cpp \
debugtrace.cpp \
StandardSerialize.cpp \
NetPack.cpp \
NetSocket.cpp \
NetEpoll.cpp \
Configure.cpp \
DynamicLib.cpp 

noinst_HEADERS = define.h \
list.h \
Common.h \
LMEnDecrypt.h \
SafeList.h \
TimeStamp.h \
ThreadGroup.h \
Pool.h \
sigslot.h \
CriticalSection.h \
debugtrace.h \
StandardSerialize.h \
BasePack.h \
include.h \
NetAddress.h \
NetPack.h \
NetSocket.h \
NetEpoll.h \
Configure.h \
DynamicLib.h 

noinst_LTLIBRARIES = libCommon.la

noinst_LDADD = -lrt
